--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,6 +1,6 @@
 .formulario {
   width: 700px;
-  margin: 0 auto;
+  margin: 0 auto 3rem;
 }
 
 .formulario__subtitulo,
@@ -19,10 +19,6 @@
   justify-content: space-between;
 }
 
-#floatingNombre,
-#floatingApellido {
-}
-
 #floatingTextarea {
   height: 8rem;
   margin: 0.5rem 0 0.2rem;
@@ -38,6 +34,9 @@
   border: none;
   border-radius: 5px;
   width: 100%;
-  padding: 0.7rem;  
-  
+  padding: 0.7rem;
+}
+
+.formulario__boton:hover {
+  background-color: rgb(21, 115, 71);
 }
